[JVMCI] assert((uint)reason < 2* _trap_hist_limit) failed: oob

XMLWordPrintable

    • b03

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/b/b/e/main/jdk_tlda/open/src/hotspot/share/oops/methodData.hpp:1999), pid=8053, tid=8214
        # assert((uint)reason < 2* _trap_hist_limit) failed: oob
        #
        # JRE version: Java(TM) SE Runtime Environment GraalVM 22.1.0-dev (17.0.2+5) (fastdebug build 17.0.2+5-LTS-jvmci-22.0-b02)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM GraalVM 22.1.0-dev (fastdebug 17.0.2+5-LTS-jvmci-22.0-b02, mixed mode, tiered, jvmci, jvmci compiler, serial gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xad5295] Deoptimization::query_update_method_data(MethodData*, int, Deoptimization::DeoptReason, bool, bool, Method*, unsigned int&, bool&, bool&)+0x255

        The values for MethodData::_trap_hist_list and Deoptimization::Reason_LIMIT are out of sync in terms of how JVMCI uses them.

              Assignee:
              Douglas Simon
              Reporter:
              Douglas Simon
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: