8278871: [JVMCI] assert((uint)reason < 2* _trap_hist_limit) failed: oob

Reviewed-by: kvn, never, dlong